活动板块 + 导出成员列表
活动板块（上传和修改活动时上传附件以及修改附件 + 删除活动时进行删除活动附带的所有附件） + 导出成员列表

--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -23,6 +23,11 @@ spring:
         max-wait: -1    #最大阻塞等待时间(负数表示没限制)
         max-idle: 5    #最大空闲
         min-idle: 0     #最小空闲
+  autoconfigure:
+    isMinio: true
+    isRedis: true
+    isRedisson: true
+
 #  error:
 #    include-stacktrace: never
 #    whitelabel:
@@ -30,6 +35,18 @@ spring:
 server:
   port: 8005
 
+
+# 文件上传存储服务器
+minio:
+  # MinIO服务器地址
+  endpoint: http://127.0.0.1:9000
+  # MinIO服务器访问凭据
+  accessKey: minioadmin
+  secretKey: minioadmin
+  # MinIO桶名称
+  bucket: hln-gs-community
+  # MinIO读取路径前缀
+  readPath: http://127.0.0.1:9000
 
 # 选择api项目下的resouces路径下的user文件夹
 # filePath: "/Users/yangyida/Documents/project/complaint_system/web-server/src/main/resources/img/user/"
